# better-godot-rng

./: .gitignore  Cargo.toml  LICENSE  README.md  better_rng.gdextension
.github/workflows/: release.yml
docs/: upstream-issue.md  upstream-pr.md
src/: lib.rs
tests/rng_experiment/: README.md  main.gd  main.tscn  project.godot
tests/rng_experiment/addons/better_rng/: better_rng.gdextension
